bin_PROGRAMS = dunelegacy
dunelegacy_SOURCES =	AStarSearch.cpp\
						Bullet.cpp\
						Choam.cpp\
						Command.cpp\
						CommandManager.cpp\
						Explosion.cpp\
						Game.cpp\
						GameInitSettings.cpp\
						GameInterface.cpp\
						House.cpp\
						Map.cpp\
						MapSeed.cpp\
						globals.cpp\
						main.cpp\
						mmath.cpp\
						ObjectBase.cpp\
						ObjectData.cpp\
						ObjectManager.cpp\
						ObjectPointer.cpp\
						RadarView.cpp\
						ScreenBorder.cpp\
						sand.cpp\
						SoundPlayer.cpp\
						Tile.cpp\
						$(NULL)\
						INIMap/INIMapLoader.cpp\
						INIMap/INIMapEditorLoader.cpp\
						INIMap/INIMapPreviewCreator.cpp\
						$(NULL)\
						CutScenes/CutScene.cpp\
						CutScenes/Scene.cpp\
						CutScenes/Intro.cpp\
						CutScenes/Meanwhile.cpp\
						CutScenes/Finale.cpp\
						CutScenes/VideoEvent.cpp\
						CutScenes/WSAVideoEvent.cpp\
						CutScenes/FadeOutVideoEvent.cpp\
						CutScenes/FadeInVideoEvent.cpp\
						CutScenes/HoldPictureVideoEvent.cpp\
						CutScenes/CrossBlendVideoEvent.cpp\
						CutScenes/TextEvent.cpp\
						CutScenes/CutSceneTrigger.cpp\
						$(NULL)\
						enet/callbacks.c\
						enet/compress.c\
						enet/host.c\
						enet/list.c\
						enet/packet.c\
						enet/peer.c\
						enet/protocol.c\
						enet/unix.c\
						enet/win32.c\
						$(NULL)\
						fixmath/fix16.c\
						fixmath/fix16_exp.c\
						fixmath/fix16_sqrt.c\
						fixmath/fix16_str.c\
						fixmath/fix16_trig.c\
						fixmath/fix32.c\
						fixmath/fix32_exp.c\
						fixmath/fix32_sqrt.c\
						fixmath/fix32_str.c\
						fixmath/fix32_trig.c\
						$(NULL)\
						misc/draw_util.cpp\
						misc/FileSystem.cpp\
						misc/fnkdat.cpp\
						misc/format.cpp\
						misc/IFileStream.cpp\
						misc/md5.cpp\
						misc/OFileStream.cpp\
						misc/Random.cpp\
						misc/sound_util.cpp\
						misc/string_util.cpp\
						misc/Scaler.cpp\
						$(NULL)\
						GUI/Button.cpp\
						GUI/GUIStyle.cpp\
						GUI/Widget.cpp\
						GUI/Window.cpp\
						GUI/ScrollBar.cpp\
						GUI/ListBox.cpp\
						GUI/DropDownBox.cpp\
						GUI/TextView.cpp\
						GUI/RadioButtonManager.cpp\
						$(NULL)\
						GUI/dune/ChatManager.cpp\
						GUI/dune/DuneStyle.cpp\
						GUI/dune/GameOptionsWindow.cpp\
						GUI/dune/LoadSaveWindow.cpp\
						GUI/dune/InGameMenu.cpp\
						GUI/dune/InGameSettingsMenu.cpp\
						GUI/dune/NewsTicker.cpp\
						GUI/dune/MessageTicker.cpp\
						GUI/dune/BuilderList.cpp\
						GUI/dune/WaitingForOtherPlayers.cpp\
						$(NULL)\
						FileClasses/INIFile.cpp\
						FileClasses/FileManager.cpp\
						FileClasses/GFXManager.cpp\
						FileClasses/SFXManager.cpp\
						FileClasses/FontManager.cpp\
						FileClasses/TextManager.cpp\
						FileClasses/Pakfile.cpp\
						FileClasses/Decode.cpp\
						FileClasses/Cpsfile.cpp\
						FileClasses/lodepng.cpp\
						FileClasses/LoadSavePNG.cpp\
						FileClasses/Shpfile.cpp\
						FileClasses/Icnfile.cpp\
						FileClasses/Vocfile.cpp\
						FileClasses/Wsafile.cpp\
						FileClasses/Palfile.cpp\
						FileClasses/Animation.cpp\
						FileClasses/IndexedTextFile.cpp\
						FileClasses/MentatTextFile.cpp\
						FileClasses/PictureFactory.cpp\
						FileClasses/PictureFont.cpp\
						FileClasses/POFile.cpp\
						FileClasses/adl/sound_adlib.cpp\
						FileClasses/adl/surroundopl.cpp\
						FileClasses/adl/woodyopl.cpp\
						FileClasses/xmidi/xmidi.cpp\
						FileClasses/music/ADLPlayer.cpp\
						FileClasses/music/DirectoryPlayer.cpp\
						FileClasses/music/XMIPlayer.cpp\
						$(NULL)\
						MapEditor/ChoamWindow.cpp\
						MapEditor/MapEditor.cpp\
						MapEditor/MapEditorInterface.cpp\
						MapEditor/MapEditorOperation.cpp\
						MapEditor/MapGenerator.cpp\
						MapEditor/MapEditorRadarView.cpp\
						MapEditor/MapSettingsWindow.cpp\
						MapEditor/MapMirror.cpp\
						MapEditor/NewMapWindow.cpp\
						MapEditor/LoadMapWindow.cpp\
						MapEditor/PlayerSettingsWindow.cpp\
						MapEditor/ReinforcementsWindow.cpp\
						MapEditor/TeamsWindow.cpp\
						$(NULL)\
						Menu/MenuBase.cpp\
						Menu/MainMenu.cpp\
						Menu/SinglePlayerMenu.cpp\
						Menu/SinglePlayerSkirmishMenu.cpp\
						Menu/CustomGameMenu.cpp\
						Menu/CustomGamePlayers.cpp\
						Menu/CustomGameStatsMenu.cpp\
						Menu/OptionsMenu.cpp\
						Menu/AboutMenu.cpp\
						Menu/HouseChoiceMenu.cpp\
						Menu/MentatMenu.cpp\
						Menu/MultiPlayerMenu.cpp\
						Menu/BriefingMenu.cpp\
						Menu/HouseChoiceInfoMenu.cpp\
						Menu/MentatHelp.cpp\
						Menu/MapChoice.cpp\
						Menu/CampaignStatsMenu.cpp\
						$(NULL)\
						Network/LANGameFinderAndAnnouncer.cpp\
						Network/NetworkManager.cpp\
						Network/ENetHttp.cpp\
						Network/MetaServerClient.cpp\
						$(NULL)\
						Trigger/TriggerManager.cpp\
						Trigger/ReinforcementTrigger.cpp\
						Trigger/TimeoutTrigger.cpp\
						$(NULL)\
						players/Player.cpp\
						players/HumanPlayer.cpp\
						players/PlayerFactory.cpp\
						players/AIPlayer.cpp\
						players/QuantBot.cpp\
						players/SmartBot.cpp\
						$(NULL)\
						structures/StructureBase.cpp\
						structures/BuilderBase.cpp\
						structures/TurretBase.cpp\
						structures/Barracks.cpp\
						structures/ConstructionYard.cpp\
						structures/GunTurret.cpp\
						structures/HeavyFactory.cpp\
						structures/HighTechFactory.cpp\
						structures/IX.cpp\
						structures/LightFactory.cpp\
						structures/Palace.cpp\
						structures/Radar.cpp\
						structures/Refinery.cpp\
						structures/RepairYard.cpp\
						structures/RocketTurret.cpp\
						structures/Silo.cpp\
						structures/StarPort.cpp\
						structures/Wall.cpp\
						structures/WindTrap.cpp\
						structures/WOR.cpp\
						$(NULL)\
						units/UnitBase.cpp\
						units/AirUnit.cpp\
						units/GroundUnit.cpp\
						units/InfantryBase.cpp\
						units/TrackedUnit.cpp\
						units/TankBase.cpp\
						units/Carryall.cpp\
						units/Devastator.cpp\
						units/Deviator.cpp\
						units/Frigate.cpp\
						units/Harvester.cpp\
						units/Launcher.cpp\
						units/MCV.cpp\
						units/Ornithopter.cpp\
						units/Quad.cpp\
						units/RaiderTrike.cpp\
						units/Saboteur.cpp\
						units/SandWorm.cpp\
						units/SiegeTank.cpp\
						units/Soldier.cpp\
						units/SonicTank.cpp\
						units/Tank.cpp\
						units/Trike.cpp\
						units/Trooper.cpp\
						$(NULL)

AM_CPPFLAGS = -DDUNELEGACY_DATADIR='"$(dunelegacydatadir)"' -I$(top_srcdir)/include
